syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.appwish.grpc";
option java_outer_classname = "WishGRPC";

service WishService {
  rpc GetAllWish (AllWishQueryProto) returns (AllWishReplyProto) {
  }
  rpc GetWish (WishQueryProto) returns (WishReplyProto) {
  }
  rpc CreateWish (WishInputProto) returns (WishReplyProto) {
  }
  rpc UpdateWish (UpdateWishInputProto) returns (WishReplyProto) {
  }
  rpc DeleteWish (WishQueryProto) returns (WishDeleteReplyProto) {
  }
}

message AllWishQueryProto {
}

message WishQueryProto {
  int64 id = 1;
}

message AllWishReplyProto {
  repeated WishProto wishes = 1;
}

message WishReplyProto {
  WishProto wish = 1;
}

message WishDeleteReplyProto {
  bool deleted = 1;
}

message WishProto {
  int64 id = 1;
  string title = 2;
  string description = 3;
  string cover_image_url = 4;
}

message WishInputProto {
  string title = 1;
  string description = 2;
  string coverImageUrl = 3;
}

message UpdateWishInputProto {
  string title = 1;
  string description = 2;
  string coverImageUrl = 3;
  int64 id = 4;
}
